crates/snapshot-tests/tests/snapshots/parser__bad_keys__empty_pipe.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[Wanted]: expected an equals, found a character at `""`
  ┌─ empty_pipe:1:3
  │
1 │ ""|=3
  │   ^ expected an equals


error: expected an equals, found a character at `""`
 --> empty_pipe:1:3
  |
1 | ""|=3
  |   ^ expected an equals
Error {
    kind: "Wanted",
    message: "expected an equals, found a character",
    span: 2..3,
    path: Some(
        "\"\"",
    ),
}
