crates/snapshot-tests/tests/snapshots/parser__bad_keys__newline3.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[UnterminatedString]: invalid basic string, expected `"`
  ┌─ newline3:1:11
  │
1 │ "something
  │           ^ expected `"`
